Notation on login page

--- a/register/templates/registration/login.html
+++ b/register/templates/registration/login.html
@@ -13,6 +13,7 @@
     {{ form.media }}
     {{ form.as_p}}
     <input type="submit" name="" value="Login">
+    <p style="color: white">Login: test , Password: test</p>
     <p class="login_register">Create a new account <a href="/register">Here</a></p>
 </form>
 </body>
