--- a/TransportApp/templates/orders_list_view.html
+++ b/TransportApp/templates/orders_list_view.html
@@ -6,46 +6,46 @@
         <button class="filter_link"> Wyszukaj zamówienie</button>
     </a>
     </div>
-    <div class="coint">
-        <div class="not_done_orders">
+    <div class="row justify-content-md-center">
+        <div class="col">
             <h2 class="list_orders_h2">Nowe zamówienia</h2>
-            <ul>
+            <ul style="margin: 2vh; list-style-type: none; max-width: 55vh; align-content: center">
                 {% for order in not_done_orders %}
-                    <a href="{{ order.get_absolute_url }}">
-                        <li><strong>{{ order.client }}</strong> <i>{{ order.delivery_address }}</i><br>
+                    <a style='text-decoration: none; color: black; font-size: 20px' href="{{ order.get_absolute_url }}">
+                        <li style='background-color: #4ac1f7; margin-bottom: 1vh; padding-left: 2vh; border-radius: 5% '><strong>{{ order.client }}</strong> <i>{{ order.delivery_address }}</i><br>
                             <b>{{ order.delivery_day|date:"d/m/Y" }}</b> {{ order.delivery_hour|time:'H:i' }}</li>
                     </a>
                 {% endfor %}
             </ul>
         </div>
-        <div class="in_progress_orders">
+        <div class="col">
             <h2 class="list_orders_h2">Zdefiniowano Transport</h2>
-            <ul>
+            <ul style="margin: 2vh; list-style-type: none; max-width: 55vh; align-content: center">
                 {% for order in in_process_orders %}
-                    <a href="{{ order.get_absolute_url }}">
-                        <li><strong>{{ order.client }}</strong> <i>{{ order.delivery_address }}</i><br>
+                    <a style='text-decoration: none; color: black; font-size: 20px' href="{{ order.get_absolute_url }}">
+                        <li style='background-color: #4ac1f7; margin-bottom: 1vh; padding-left: 2vh; border-radius: 5% '><strong>{{ order.client }}</strong> <i>{{ order.delivery_address }}</i><br>
                             <b>{{ order.delivery_day|date:"d/m/Y" }}</b> {{ order.delivery_hour|time:'H:i' }}</li>
                     </a>
                 {% endfor %}
             </ul>
         </div>
-        <div class="done_orders">
+        <div class="col">
             <h2 class="list_orders_h2">Zrealizowane zamówienia</h2>
-            <ul>
+            <ul style="margin: 2vh; list-style-type: none; max-width: 55vh; align-content: center">
                 {% for order in done_orders %}
-                    <a href="{{ order.get_absolute_url }}">
-                        <li><strong>{{ order.client }}</strong> <i>{{ order.delivery_address }}</i><br>
+                    <a style='text-decoration: none; color: black; font-size: 20px' href="{{ order.get_absolute_url }}">
+                        <li style='background-color: #4ac1f7; margin-bottom: 1vh; padding-left: 2vh; border-radius: 5% '><strong>{{ order.client }}</strong> <i>{{ order.delivery_address }}</i><br>
                             <b>{{ order.delivery_day|date:"d/m/Y" }}</b> {{ order.delivery_hour|time:'H:i' }}</li>
                     </a>
                 {% endfor %}
             </ul>
         </div>
-        <div class="done_orders">
+        <div class="col">
             <h2 class="list_orders_h2">Anulowane zamówienia</h2>
-            <ul>
+            <ul style="margin: 2vh; list-style-type: none; max-width: 55vh; align-content: center">
                 {% for order in cancel_orders %}
-                    <a href="{{ order.get_absolute_url }}">
-                        <li><strong>{{ order.client }}</strong> <i>{{ order.delivery_address }}</i><br>
+                    <a style='text-decoration: none; color: black; font-size: 20px' href="{{ order.get_absolute_url }}">
+                        <li style='background-color: #4ac1f7; margin-bottom: 1vh; padding-left: 2vh; border-radius: 5% '><strong>{{ order.client }}</strong> <i>{{ order.delivery_address }}</i><br>
                             <b>{{ order.delivery_day|date:"d/m/Y" }}</b> {{ order.delivery_hour|time:'H:i' }}</li>
                     </a>
                 {% endfor %}
