Filter view responsive

--- a/TransportApp/templates/order_filter.html
+++ b/TransportApp/templates/order_filter.html
@@ -1,37 +1,23 @@
+{% extends 'base.html' %}
 {% load static %}
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/static/main.css">
-    <title>Transport App</title>
-</head>
-<body>
-<div class="mainMenu">
-    <ul>
-        <li><a href="{% url 'base' %}"> Strona Główna </a></li>
-        <li><a href="{% url 'order_list_view' %}">Lista Zamówień</a></li>
-        <li><a href="{% url 'order_add_view' %}"> Dodaj zamówienie </a></li>
-        <li><a href="{% url 'order_filter' %}"> Filtruj zamówienia </a></li>
-        <li><a href="{% url 'settings' %}"> Ustawienia </a></li>
-    </ul>
-</div>
-<div class="filter_view">
+{% block base %}
+<div class="filter_view" style="margin-top: 2vh;">
     <div class="filter_form">
         <form method="get">
             {{ filter.form.as_p }}
                 <br>
-            <button type="submit">Szukaj</button>
+            <button class='btn' type="submit">Szukaj</button>
         </form>
     </div>
-    <ul class="filter">
+ <div class="justify-content-md-center">
+      <ul class="list-inline mx-auto justify-content-center">
         {% for item in object_list %}
-            <a href="{{ item.get_absolute_url }}">
-                <li>{{ item }}</li>
+            <a style='text-decoration: none; color: black; font-size: large;' href="{{ item.get_absolute_url }}">
+                 <li style='background-color: #4ac1f7; margin-bottom: 1vh; padding: 2vh; min-width: 375px; max-width: 600px; margin-top: 1vh; '
+                            class="list-inline-item">{{ item }}</li>
             </a>
         {% endfor %}
     </ul>
 </div>
+ </div>
+{% endblock %}
