Settings display responsive

--- a/TransportApp/static/main.css
+++ b/TransportApp/static/main.css
@@ -446,6 +446,7 @@ a {
     background-color: #fefae0;
     text-align: center;
     border-radius: 10px;
+    margin-bottom: 1vh;
 }
 .settin_button button {
     margin-bottom: 5px;
