--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,97 +1,85 @@
-{% load static %}
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/static/main.css">
-    <title>Transport App</title>
-</head>
-<body>
-<div class="mainMenu">
-    <ul>
-        <li><a href="{% url 'base' %}"> Strona Główna </a></li>
-        <li><a href="{% url 'order_list_view' %}">Lista Zamówień</a></li>
-        <li><a href="{% url 'order_add_view' %}"> Dodaj zamówienie </a></li>
-        <li><a href="{% url 'order_filter' %}"> Filtruj zamówienia </a></li>
-        <li><a href="{% url 'settings' %}"> Ustawienia </a></li>
-    </ul>
-</div>
-<div class="settings_coint">
-    <div class="no_flex">
+{% extends 'base.html' %}
+{% block base %}
+<div class="row" style="margin: 2vh; text-align: center; justify-content: center">
+    <div class="col-sm-2" style="background-color: #4ac1f7; border-radius: 3%; margin-bottom: 1vh;">
         <div class="cars">
-            <h3> Zdefiniowane pojazdy:</h3>
-            <ul>
+            <h3 style="text-align: center; margin-top: 2vh;"> Zdefiniowane pojazdy:</h3>
+            <ul style="text-align: center; list-style-type: none;">
                 {% for car in cars %}
                     <li><h4>{{ car }}</h4></li>
                     <a class="settings_modify" href="{{ car.get_modify_url }}">
-                        <button>Edytuj</button>
+                        <button class="btn btn-secondary">Edytuj</button>
                     </a>
                     <a class="settings_delete" href="{{ car.get_delete_url }}">
-                        <button>Usuń</button>
+                        <button class="btn btn-secondary">Usuń</button>
                     </a>
                 {% endfor %}
             </ul>
         </div>
         <br>
         <div class="drivers">
-            <h3> Zdefiniowani kierowcy</h3>
-            <ul>
+            <h3 style="text-align: center; margin-top: 2vh"> Zdefiniowani kierowcy</h3>
+            <ul style="text-align: center; list-style-type: none;">
                 {% for driver in drivers %}
                     <li><h4>{{ driver }}</h4></li>
                     <a class="settings_modify" href="{{ driver.get_modify_url }}">
-                        <button>Edytuj</button>
+                        <button class="btn btn-secondary">Edytuj</button>
                     </a>
                     <a class="settings_delete" href="{{ driver.get_delete_url }}">
-                        <button>Usuń</button>
+                        <button class="btn btn-secondary">Usuń</button>
                     </a>
                 {% endfor %}
             </ul>
         </div>
     </div>
-    <div class="all_orders">
-        <h3>Historia wszystkich zamówień</h3>
-        <ul>
+    <div class="col-sm-4" style="background-color: #219ebc; border-radius: 5%; margin-bottom: 1vh; margin-left: 1vh;">
+        <h3 style="text-align: center; margin-top: 2vh">Historia wszystkich zamówień</h3>
+        <ul style="margin: 2vh; list-style-type: none; align-content: center">
             {% for order in orders %}
-                <a href="{{ order.get_absolute_url }}">
-                    <li> {{ order }}</li>
+                <a style='text-decoration: none; font-size: large;' href="{{ order.get_absolute_url }}">
+                    <li style='background-color: #30343f; color: white; margin-bottom: 1vh; padding-left: 2vh; '
+                            class="base_view_orders"> {{ order }}</li>
                 </a>
             {% endfor %}
         </ul>
     </div>
-    <div class="no_flex">
+    <div class="col-sm-2" style="margin-bottom: 1vh;">
         <div class="settin_button">
             <p> Dodaj nowego Kierowce</p>
-            <a href="{% url 'driver_add_view' %}"><button> Dodaj</button></a>
+            <a href="{% url 'driver_add_view' %}"><button class="btn btn-dark"> Dodaj</button></a>
         </div>
         <div class="settin_button">
             <p> Dodaj nowy pojazd </p>
-            <a href="{% url 'car_add_view' %}"><button> Dodaj </button></a>
+            <a href="{% url 'car_add_view' %}"><button class="btn btn-dark"> Dodaj </button></a>
         </div>
         <div class="settin_button">
             <p> Lista wszystkich kierowców </p>
-            <a href="{% url 'driver_list_view' %}"><button> Sprawdź </button></a>
+            <a href="{% url 'driver_list_view' %}"><button class="btn btn-dark"> Sprawdź </button></a>
         </div>
         <div class="settin_button">
             <p> Lista wszystkich samochodów </p>
-            <a href="{% url 'car_list_view' %}"><button> Sprawdź </button></a>
+            <a href="{% url 'car_list_view' %}"><button class="btn btn-dark"> Sprawdź </button></a>
         </div>
         <div class="settin_button">
             <p> Lista wszystkich transportów </p>
-            <a href="{% url 'transport_list_view' %}"><button> Sprawdź </button></a>
+            <a href="{% url 'transport_list_view' %}"><button class="btn btn-dark"> Sprawdź </button></a>
         </div>
         <div class="settin_button">
             <p> Zalogowany jako: {{ user }} </p>
-            <a href="{% url 'logout' %}"><button> Wyloguj</button></a>
+            <a href="{% url 'logout' %}"><button class="btn btn-dark"> Wyloguj</button></a>
         </div>
         <div class="settin_button">
             <p> Filtruj zamówienia </p>
-            <a href="{% url 'order_filter' %}"><button> Filtruj</button></a>
+            <a href="{% url 'order_filter' %}"><button class="btn btn-dark"> Filtruj</button></a>
         </div>
     </div>
-    <div class="no_flex">
-        <p> There will be some statistic data once I decite to use different map </p>
+    <div class="col-sm-3" style="background-color: #5b80b2; border-radius: 5%">
+        <h2> There will be some statistic data once I decite to use different map </h2>
+        <p style="font-size: 18px"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+            ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+            voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
 </div>
+{% endblock %}
