--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="/static/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
     <title>Transport App</title>
 </head>
 <body style="background-color: #0d1b2a">
@@ -67,7 +70,7 @@
         </ul>
     </div>
     {% if my_map %}
-        <div class="col-8">
+        <div style='min-width: 420px' class="col-8">
             {{ my_map|safe }}
         </div>
     {% endif %}
