Main page and order list page improvements

--- a/TransportApp/templates/order_filter.html
+++ b/TransportApp/templates/order_filter.html
@@ -6,7 +6,7 @@
         <form method="get">
             {{ filter.form.as_p }}
                 <br>
-            <button class='btn' type="submit">Szukaj</button>
+            <button  style="margin: 1vh" class='btn' type="submit">Szukaj</button>
         </form>
     </div>
  <div class="justify-content-md-center">
