--- a/TransportApp/templates/orders_list_view.html
+++ b/TransportApp/templates/orders_list_view.html
@@ -6,7 +6,7 @@
         <button class="filter_link"> Wyszukaj zamówienie</button>
     </a>
     </div>
-    <div class="row justify-content-md-center">
+    <div class="row justify-content-md-center" style="margin-right: 0; margin-left: 0">
         <div class="col">
             <h2 class="list_orders_h2">Nowe zamówienia</h2>
             <ul style="margin: 2vh; list-style-type: none; max-width: 55vh; align-content: center">
