--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
     </div>
 </nav>
 {% block base %}
-    <div class="row justify-content-md-center">
+    <div class="row justify-content-md-center" style="margin-left: 0; margin-right: 0;">
     <div class="container-sm col-sm">
         <h3 style="color: white; margin: 3vh; text-align: center">Nie zrealizowane zamówienia:</h3>
         <ul style="margin: 2vh; list-style-type: none; max-width: 55vh; align-content: center">
