--- a/register/templates/registration/login.html
+++ b/register/templates/registration/login.html
@@ -4,17 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/static/main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
     <title>Transport App by Wiktor Karaszewicz</title>
 </head>
-<body class="login_body">
-<form class="login" method="post">
-    {% csrf_token %}
-    <h1> Login </h1>
-    {{ form.media }}
-    {{ form.as_p}}
-    <input type="submit" name="" value="Login">
-    <p style="color: white">Login: test , Password: test</p>
-    <p class="login_register">Create a new account <a href="/register">Here</a></p>
-</form>
+<body style="background-color: #22223b">
+<div class="container-sm">
+                <form class="login" method="post">
+                    {% csrf_token %}
+                    <h1> Login </h1>
+                    {{ form.media }}
+                    {{ form.as_p }}
+                    <input type="submit" name="" value="Login">
+                    <p style="color: white">Login: test , Password: test</p>
+                    <p class="login_register">Create a new account <a href="/register">Here</a></p>
+                </form>
+</div>
 </body>
 </html>
