--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,7 @@
         </ul>
     </div>
     {% if my_map %}
-        <div style='min-width: 430px' class="col-8">
+        <div style='min-width: 430px; padding-left: 0;' class="col-8">
             {{ my_map|safe }}
         </div>
     {% endif %}
