--- a/templates/list_view.html
+++ b/templates/list_view.html
@@ -1,9 +1,7 @@
 <div class ='list'>
-    <ul class="list_view">
+    <ul class="list-group">
         {% for item in object_list %}
-            <a href="{{ item.get_absolute_url }}">
-            <li class="list_item">{{ item }}</li>
-            </a>
+            <li class="list-group-item"><h3>{{ item }}</h3></li>
         {% endfor %}
     </ul>
 </div>
